chore: update example codebase
